--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -256,8 +256,8 @@ and the derived files
 % \texttt{\string\char\ 233} in the unicode fonts, and produce a \texttt{\'e}.
 % We will call this behaviour the \emph{unicode font mode}. To enable this
 % mode, you can use the option \texttt{unactivate} in \textsf{luainputenc},
-% and you must use the font encoding \texttt{EU2} provided by this package
-% too. See documentation of \textsf{euenc} package for more details about
+% and you must use the font encoding \texttt{EU2} provided by the \textsf{euenc}
+% package. See documentation of \textsf{euenc} package for more details about
 % \texttt{EU2}. To use this mode with \texttt{EU2}, you must be able to open OTF
 % fonts. A simple way to do so it by using the package \textsf{luaotfload}.
 %
