Quick port to luatexbase
Just replaced luatextra. with luatexbase., may be it is better to just
load the specific luatexbase modules.

closes #1

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ documents.
 
 Please see luatextra-reference.pdf for an introduction.
                    
-This package is developed on <http://github.com/mpg/luainputenc>, see the 'News'
+This package is developed on <http://github.com/mpg/luainputenc>, see the 'NEWS'
 file for version history.
 
 Installation
