--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
                      History of the luainputenc bundle
 
+2010/02/07, luainputenc v0.97:
+    * adapting to the new luatexbase system
+
 2010/02/07, luainputenc v0.96:
     * removing the files eu2enc.def and eu2lmr.fd from luainputenc, they
         can now be found in the euenc package.
